crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__keyword_rest_parameter_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/keyword_rest_parameter_node.rb
---
****FORMATTED****
def a(**b) end

****AST****
ProgramNode: "def a(**b)\nend"
__DefNode: "def a(**b)\nend"
____KeywordRestParameterNode: "**b"
