crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__local_variable_and_write_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/local_variable_and_write_node.rb
---
****FORMATTED****
target &&= value

****AST****
ProgramNode: "target &&= value"
__LocalVariableAndWriteNode: "target &&= value"
____CallNode: "value"
