crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__local_variable_target_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/local_variable_target_node.rb
---
****FORMATTED****
foo, bar = baz
foo => baz

****AST****
ProgramNode: "foo, bar = baz\n\nfoo => baz"
__MultiWriteNode: "foo, bar = baz"
____LocalVariableTargetNode: "foo"
____LocalVariableTargetNode: "bar"
____CallNode: "baz"
__MatchRequiredNode: "foo => baz"
____LocalVariableReadNode: "foo"
____LocalVariableTargetNode: "baz"
