crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__local_variable_write_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/local_variable_write_node.rb
---
****FORMATTED****
foo = 1

****AST****
ProgramNode: "foo = 1"
__LocalVariableWriteNode: "foo = 1"
____IntegerNode: "1"
