crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__match_last_line_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/match_last_line_node.rb
---
if /foo/i
end
if /foo\/bar/
end
