crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__match_required_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/match_required_node.rb
---
****FORMATTED****
0 => foo
0 =>
  foofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoo

****AST****
ProgramNode: "0 => foo\n0 => foofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoo"
__MatchRequiredNode: "0 => foo"
____IntegerNode: "0"
____LocalVariableTargetNode: "foo"
__MatchRequiredNode: "0 => foofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoo"
____IntegerNode: "0"
____LocalVariableTargetNode: "foofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoofoo"
