crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__match_write_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/match_write_node.rb
---
****FORMATTED****
/(?<foo>bar)/.=~(baz)

****AST****
ProgramNode: "/(?<foo>bar)/ =~ baz"
__MatchWriteNode: "/(?<foo>bar)/ =~ baz"
____RegularExpressionNode: "/(?<foo>bar)/"
____CallNode: "baz"
____LocalVariableTargetNode: "foo"
